# Client

./: CMakeLists.txt  Test4  makefile  test1  test2  test3  text
include/: clientMain.h  connectionHandler.h  inputClient.h  socketClient.h
src/: BGSClient.cpp  Client.cpp  clientMain.cpp  connectionHandler.cpp  echoClient.cpp  inputClient.cpp  main.cpp  socketClient.cpp
